--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
     "version": 2,
     "framework": null,
+    "buildCommand": "",
+    "outputDirectory": "public",
     "functions": {
         "api/index.php": {
             "runtime": "vercel-php@0.7.2"
@@ -9,39 +11,39 @@
     "routes": [
         {
             "src": "/favicon\\.(ico|svg)",
-            "dest": "/public/favicon.$1"
+            "dest": "/favicon.$1"
         },
         {
             "src": "/favicon-96x96\\.png",
-            "dest": "/public/favicon-96x96.png"
+            "dest": "/favicon-96x96.png"
         },
         {
             "src": "/apple-touch-icon\\.png",
-            "dest": "/public/apple-touch-icon.png"
+            "dest": "/apple-touch-icon.png"
         },
         {
             "src": "/site\\.webmanifest",
-            "dest": "/public/site.webmanifest"
+            "dest": "/site.webmanifest"
         },
         {
             "src": "/robots\\.txt",
-            "dest": "/public/robots.txt"
+            "dest": "/robots.txt"
         },
         {
             "src": "/assets/(.*)",
-            "dest": "/public/assets/$1"
+            "dest": "/assets/$1"
         },
         {
             "src": "/vendor/(.*)",
-            "dest": "/public/vendor/$1"
+            "dest": "/vendor/$1"
         },
         {
             "src": "/images/(.*)",
-            "dest": "/public/images/$1"
+            "dest": "/images/$1"
         },
         {
             "src": "/downloads/(.*)",
-            "dest": "/public/downloads/$1"
+            "dest": "/downloads/$1"
         },
         {
             "src": "/(.*)",
