--- a/vercel.json
+++ b/vercel.json
@@ -1,49 +1,51 @@
 {
     "version": 2,
-    "framework": null,
-    "buildCommand": "",
-    "outputDirectory": "public",
-    "functions": {
-        "api/index.php": {
-            "runtime": "vercel-php@0.7.2"
+    "builds": [
+        {
+            "src": "api/index.php",
+            "use": "vercel-php@0.7.2"
+        },
+        {
+            "src": "public/**",
+            "use": "@vercel/static"
         }
-    },
+    ],
     "routes": [
         {
-            "src": "/favicon\\.(ico|svg)",
-            "dest": "/favicon.$1"
-        },
-        {
-            "src": "/favicon-96x96\\.png",
-            "dest": "/favicon-96x96.png"
-        },
-        {
-            "src": "/apple-touch-icon\\.png",
-            "dest": "/apple-touch-icon.png"
-        },
-        {
-            "src": "/site\\.webmanifest",
-            "dest": "/site.webmanifest"
-        },
-        {
-            "src": "/robots\\.txt",
-            "dest": "/robots.txt"
-        },
-        {
             "src": "/assets/(.*)",
-            "dest": "/assets/$1"
+            "dest": "/public/assets/$1"
         },
         {
             "src": "/vendor/(.*)",
-            "dest": "/vendor/$1"
+            "dest": "/public/vendor/$1"
         },
         {
             "src": "/images/(.*)",
-            "dest": "/images/$1"
+            "dest": "/public/images/$1"
         },
         {
             "src": "/downloads/(.*)",
-            "dest": "/downloads/$1"
+            "dest": "/public/downloads/$1"
+        },
+        {
+            "src": "/favicon\\.(ico|svg)",
+            "dest": "/public/favicon.$1"
+        },
+        {
+            "src": "/favicon-96x96\\.png",
+            "dest": "/public/favicon-96x96.png"
+        },
+        {
+            "src": "/apple-touch-icon\\.png",
+            "dest": "/public/apple-touch-icon.png"
+        },
+        {
+            "src": "/site\\.webmanifest",
+            "dest": "/public/site.webmanifest"
+        },
+        {
+            "src": "/robots\\.txt",
+            "dest": "/public/robots.txt"
         },
         {
             "src": "/(.*)",
