--- a/vercel.json
+++ b/vercel.json
@@ -1,55 +1,8 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "api/index.php",
-            "use": "vercel-php@0.7.2"
-        },
-        {
-            "src": "public/**",
-            "use": "@vercel/static"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/assets/(.*)",
-            "dest": "/public/assets/$1"
-        },
-        {
-            "src": "/vendor/(.*)",
-            "dest": "/public/vendor/$1"
-        },
-        {
-            "src": "/images/(.*)",
-            "dest": "/public/images/$1"
-        },
-        {
-            "src": "/downloads/(.*)",
-            "dest": "/public/downloads/$1"
-        },
-        {
-            "src": "/favicon\\.(ico|svg)",
-            "dest": "/public/favicon.$1"
-        },
-        {
-            "src": "/favicon-96x96\\.png",
-            "dest": "/public/favicon-96x96.png"
-        },
-        {
-            "src": "/apple-touch-icon\\.png",
-            "dest": "/public/apple-touch-icon.png"
-        },
-        {
-            "src": "/site\\.webmanifest",
-            "dest": "/public/site.webmanifest"
-        },
-        {
-            "src": "/robots\\.txt",
-            "dest": "/public/robots.txt"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/api/index.php"
-        }
-    ]
+    "framework": null,
+    "buildCommand": "",
+    "outputDirectory": "dist",
+    "cleanUrls": true,
+    "trailingSlash": false
 }
